いろいろ修正

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,4 +16,9 @@
         "before": 1,
         "after": 1,
     },
+    "cSpell.words": [
+        "minecraft",
+        "netherite",
+        "silktouch"
+    ],
 }
